//
// Copyright 2022 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions;

service OakFunctions {
  // Initializes the service and remote attestation keys.
  // method_id: 0
  rpc Initialize(InitializeRequest) returns (InitializeResponse);

  // Handles an invocation coming from a client.
  // method_id: 1
  rpc Invoke(InvokeRequest) returns (InvokeResponse);

  // Replaces the existing lookup data with the new value.
  // method_id: 2
  rpc UpdateLookupData(LookupData) returns (Empty);
}

message InitializeRequest {
  bytes wasm_module = 1;
  uint32 constant_response_size = 2;
}

message InitializeResponse {
  PublicKeyInfo public_key_info = 1;
}

message PublicKeyInfo {
  bytes public_key = 1;
  bytes attestation = 2;
}

message InvokeRequest {
  bytes body = 1;
}

message InvokeResponse {
  bytes body = 1;
}

message LookupDataEntry {
  bytes key = 1;
  bytes value = 2;
}

// If the definition of LookupData changes, the estimation of the size of the LookupData when
// serialized in the Oak Functions Launcher needs to change, too.
message LookupData {
  repeated LookupDataEntry items = 1;
}

message Empty {}
